(fix) Make links in Node pop out clickable and wrap properly.

--- a/client/styles.css
+++ b/client/styles.css
@@ -69,4 +69,7 @@ footer.page-footer div.footer-copyright {
   margin-top: 30px;
 }
 
-/*roadmap*/
+/****** ROADMAPS ******/
+.card-panel {
+  word-wrap: break-word;
+}
